# handler/response.go
@@ -32,3 +32,7 @@ type CreateOpeningResponse struct {
 	Message string `json:"message"`
 	Data 	schemas.OpeningResponse `json:"data"`
 }
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+	Data 	schemas.OpeningResponse `json:"data"`
+}
